--- a/_posts/2020-02-01-homl4.md
+++ b/_posts/2020-02-01-homl4.md
@@ -17,7 +17,7 @@ $$
 - $\hat{y}$ : 예측값, $\quad n$ : 특성의 수,$\quad x_i$ : $i$ 번째 특성값
 - $w_j$ : j번째 모델 파라미터 ($w_0$ : 편향,    $w_1, w_2, ... , w_n$ : 특성의 가중치)
 
-위의 식을 벡터 형태로 나타내면
+위의 식을 벡터 형태로 나타내면 <br/>
 $$
 \hat{y} = h_w(\mathbf{x}) =  w^T \cdot{\mathbf{x}}
 $$
@@ -26,13 +26,12 @@ $$
 - $w^T$ : 모델 파라미터 벡터
 - $\mathbf{x}$ : 샘플의 특성 벡터
 
-[2장]([https://yngie-c.github.io/hands%20on%20machine%20learning/2020/01/29/homl2/](https://yngie-c.github.io/hands on machine learning/2020/01/29/homl2/)) 에서 회귀모델에 가장 널리 사용되는 지표를 평균 제곱근 오차(RMSE)라고 하였음. 실제로는 RMSE와 같은 결과를 내면서 더 간단한 평균 제곱 오차(Mean Square Error, MSE)를 사용한다.
+[2장]([https://yngie-c.github.io/hands%20on%20machine%20learning/2020/01/29/homl2/](https://yngie-c.github.io/hands on machine learning/2020/01/29/homl2/)) 에서 회귀모델에 가장 널리 사용되는 지표를 평균 제곱근 오차(RMSE)라고 하였음. 실제로는 RMSE와 같은 결과를 내면서 더 간단한 평균 제곱 오차(Mean Square Error, MSE)를 사용한다.<br/>
 $$
 MSE(\mathbf{X}, h_w) = \frac{1}{m}\sum_{i=1}^m( w^T\cdot\mathbf{x}^{(i)} - y^{(i)})^2
 $$
 
-
-**정규 방정식** : 비용 함수를 최소화 하는 해석적인 방법 (자세한 설명은 [이곳]([https://ko.wikipedia.org/wiki/%EC%B5%9C%EC%86%8C%EC%A0%9C%EA%B3%B1%EB%B2%95#%EC%84%A0%ED%98%95_%EC%B5%9C%EC%86%8C%EC%A0%9C%EA%B3%B1%EB%B2%95](https://ko.wikipedia.org/wiki/최소제곱법#선형_최소제곱법)) 을 참조하자)
+**정규 방정식** : 비용 함수를 최소화 하는 해석적인 방법 (자세한 설명은 [이곳]([https://ko.wikipedia.org/wiki/%EC%B5%9C%EC%86%8C%EC%A0%9C%EA%B3%B1%EB%B2%95#%EC%84%A0%ED%98%95_%EC%B5%9C%EC%86%8C%EC%A0%9C%EA%B3%B1%EB%B2%95](https://ko.wikipedia.org/wiki/최소제곱법#선형_최소제곱법)) 을 참조하자) <br/>
 $$
 \hat{w} = (\mathbf{X}^T \cdot \mathbf{X})^{-1} \cdot \mathbf{X}^T \cdot \mathbf{y}
 $$
@@ -66,17 +65,17 @@ theta_best = np.linalg.inv(X_b.T.dot(X_b)).dot(X_b.T).dot(y)
 
 특성의 스케일이 다른 경우에도 수렴하는데 시간이 오래 걸릴 수 있으므로 특성 스케일링을 통해 같은 스케일을 갖도록 만들어야 한다.
 
-**배치 경사 하강법** : 경사 하강법을 구현하려면 모델의 각 파라미터 $w_j$ 에 대해서 비용 함수의 그래디언트를 계산. 이를 위해서는 **편도함수** (Partial Derivative)를 구해야 한다. 파라미터 $w_j$ 에 대한 비용 함수의 편도함수는 다음과 같다.
+**배치 경사 하강법** : 경사 하강법을 구현하려면 모델의 각 파라미터 $w_j$ 에 대해서 비용 함수의 그래디언트를 계산. 이를 위해서는 **편도함수** (Partial Derivative)를 구해야 한다. 파라미터 $w_j$ 에 대한 비용 함수의 편도함수는 다음과 같다.<br/>
 $$
 \frac{\partial}{\partial w_j}MSE(w) = \frac{2}{m}\sum_{i=1}^{m}(w^T \cdot \mathbf{x}^{(i)} - y^{(i)})x^{(i)}_j
 $$
 
-편도함수는 아래의 식을 사용해 한꺼번에 계산할 수도 있다. [^2]
+편도함수는 아래의 식을 사용해 한꺼번에 계산할 수도 있다. [^2]<br/>
 $$
 \nabla_w MSE(w) = \left[\begin{array}{ccc} \frac{\partial}{\partial w_0}MSE(w) \\ \frac{\partial}{\partial w_1}MSE(w) \\ ... \\ \frac{\partial}{\partial w_n}MSE(w) \end{array}\right] = \frac{2}{m}\mathbf{X}^T \cdot (\mathbf{X} \cdot w - \mathbf{y})
 $$
 
-그래디언트 벡터가 구해지면 학습률($\eta$) 을 곱하여 기존의 $w$ 에서 빼주어 새로운 $w$ 를 구하는 방법을 계속 반복한다.
+그래디언트 벡터가 구해지면 학습률($\eta$) 을 곱하여 기존의 $w$ 에서 빼주어 새로운 $w$ 를 구하는 방법을 계속 반복한다.<br/>
 $$
 w^{d+1} = w^d - \eta \nabla_w MSE(w)
 $$
@@ -97,12 +96,12 @@ sgd_reg.fit(X, y.ravel())
 
 **미니배치 경사 하강법** (Mini-batch Gradient Descent) : 각 스텝에서 전체 훈련 세트나 하나의 샘플을 기반으로 그래디언트를 계산하는 것이 아니라 미니배치라고 부르는 임의의 작은 샘플 세트에 대해 그래디언트를 계산하는 방법.
 
-| 알고리즘             | 샘플 수(m)<br>이 클 때 | 특성 수(n)<br>이 클 때 | 외부 메모리<br>학습 지원 | 스케일<br>조정 필요 | 하이퍼<br>파라미터 수 | 사이킷런<br>클래스 |
-| -------------------- | ---------------------- | ---------------------- | ------------------------ | ------------------- | --------------------- | ------------------ |
-| 정규방정식           | 빠름                   | 느림                   | X                        | X                   | 0                     | LinearRegression   |
-| 배치 경사 하강법     | 느림                   | 빠름                   | X                        | O                   | 2                     | N/A                |
-| 확률적 경사 하강법   | 빠름                   | 빠름                   | O                        | O                   | >=2                   | SGDRegressor       |
-| 미니배치 경사 하강법 | 빠름                   | 빠름                   | O                        | O                   | >=2                   | N/A                |
+| 알고리즘             | 샘플 수가 클 때 | 특성 수가 클 때 | 외부 메모리 학습 지원 | 스케일 조정 필요 | 하이퍼 파라미터 수 | 사이킷런 클래스  |
+| -------------------- | --------------- | --------------- | --------------------- | ---------------- | ------------------ | ---------------- |
+| 정규방정식           | 빠름            | 느림            | X                     | X                | 0                  | LinearRegression |
+| 배치 경사 하강법     | 느림            | 빠름            | X                     | O                | 2                  | N/A              |
+| 확률적 경사 하강법   | 빠름            | 빠름            | O                     | O                | >=2                | SGDRegressor     |
+| 미니배치 경사 하강법 | 빠름            | 빠름            | O                     | O                | >=2                | N/A              |
 
 <br/>
 
@@ -201,11 +200,13 @@ sgd_reg.fit(X, y.ravel())
 # penalty는 사용할 규제를 지정한다. "12"는 SGD의 비용 함수에 L2 노름의 제곱을 2로 나눈 규제항을 추가하게 한다. (즉, 릿지 회귀와 같다.)
 ```
 
-**라쏘 회귀** (Lasso) : 라쏘 회귀는 비용 함수에 규제항을 더하지만 $l_2$ 노름의 제곱을 2로 나눈 것 대신 가중치 벡터의 $l_1$ 노름을 사용한다. 라쏘 회귀의 비용 함수 $J(w)$ 는 다음과 같다.
+**라쏘 회귀** (Lasso) : 라쏘 회귀는 비용 함수에 규제항을 더하지만 $l_2$ 노름의 제곱을 2로 나눈 것 대신 가중치 벡터의 $l_1$ 노름을 사용한다. 라쏘 회귀의 비용 함수 $J(w)$ 는 다음과 같다.<br/>
 $$
 J(w) = MSE(w) + \alpha \sum_{i=1}^n|w_i|
 $$
-라쏘 회귀의 특징은 덜 중요한 특성의 가중치를 완전히 제거하려고 한다는 점이다. 다시 말해 라쏘 회귀는 자동으로 특성 선택을 하고 희소 모델(Sparse model)[^6]을 만든다. 라쏘의 비용 함수는 $w_i = 0$ 에서 미분 가능하지 않다. 하지만 $w_i = 0$ 에서 서브 그래디언트 벡터(Subgradient vector) $\mathbf{g}$ 를 사용하면 경사 하강법을 적용하는 데 문제가 없다.
+<br/>
+
+라쏘 회귀의 특징은 덜 중요한 특성의 가중치를 완전히 제거하려고 한다는 점이다. 다시 말해 라쏘 회귀는 자동으로 특성 선택을 하고 희소 모델(Sparse model)[^6]을 만든다. 라쏘의 비용 함수는 $w_i = 0$ 에서 미분 가능하지 않다. 하지만 $w_i = 0$ 에서 서브 그래디언트 벡터(Subgradient vector) $\mathbf{g}$ 를 사용하면 경사 하강법을 적용하는 데 문제가 없다.<br/>
 $$
 g(w,J) = \nabla_w MSE(w) + \left[\begin{array}{ccc} \text{sign}(w_1) \\ \text{sign}(w_2) \\ ... \\ \text{sign}(w_n) \end{array}\right] \quad 여기서 \quad \text{sign}(w_i) = \begin{cases} -1 \quad w_i < 0 \\ 0 \quad w_i = 0 \\ +1 \quad w_i > 0 \end{cases}
 $$
@@ -222,11 +223,11 @@ sgd_reg = SGDRegressor(max_iter=5, penalty="11")
 sgd_reg.fit(X, y.ravel())
 ```
 
-**엘라스틱 넷** (Elastic Net) : 엘라스틱 넷은 위의 두 모델(릿지 회귀, 라쏘 회귀)을 절충한 모델이다. 혼합 비율은 파라미터 $r$ 을 사용하여 조절한다. $r=0$ 이면 릿지 회귀와 같고, $r=1$ 이면 라쏘 회귀와 같아진다. 엘라스틱 넷의 비용 함수는 다음과 같다.
+**엘라스틱 넷** (Elastic Net) : 엘라스틱 넷은 위의 두 모델(릿지 회귀, 라쏘 회귀)을 절충한 모델이다. 혼합 비율은 파라미터 $r$ 을 사용하여 조절한다. $r=0$ 이면 릿지 회귀와 같고, $r=1$ 이면 라쏘 회귀와 같아진다. 엘라스틱 넷의 비용 함수는 다음과 같다.<br/>
 $$
 J(w) = MSE(w) + r \alpha \sum_{i=1}^n|w_i| + \frac{1-r}{2} \alpha \sum_{i=1}^n w_i^2
 $$
-다음은 사이킷런에서 엘라스틱 넷을 작동시키는 방법이다. (r은 l1_ratio 값으로 조정할 수 있다.)
+<br/>다음은 사이킷런에서 엘라스틱 넷을 작동시키는 방법이다. (r은 l1_ratio 값으로 조정할 수 있다.)
 
 ```python
 from sklearn.linear_model import ElasticNet
@@ -268,11 +269,11 @@ for epoch in range(1000):
 
 **로지스틱 회귀** (Logistic Regression) : 로지스틱 회귀는 샘플이 특정 클래스에 속할 확률을 추정하는 데 널리 사용된다. 추정 확률이 50%가 넘으면 모델은 그 샘플이 해당 클래스에 속한다고 예측하며, 그렇지 않은 경우에는 클래스에 속하지 않는다고 평가한다.
 
-로지스틱 회귀는 선형 회귀와 같이 입력 특성의 가중치 합을 계산한다. 그러나 바로 출력하지 않고 결괏값의 로지스틱을 출력한다.
+로지스틱 회귀는 선형 회귀와 같이 입력 특성의 가중치 합을 계산한다. 그러나 바로 출력하지 않고 결괏값의 로지스틱을 출력한다.<br/>
 $$
 \hat{p} = h_w(\mathbf{x}) = \sigma (w^T \cdot \mathbf{x})
 $$
-$\sigma (\cdot)$ : 시그모이드 함수. 치역(결괏값의 범위)을 (0,1)로 만드는 S자 형태의 함수.
+<br/>$\sigma (\cdot)$ : 시그모이드 함수. 치역(결괏값의 범위)을 (0,1)로 만드는 S자 형태의 함수.<br/>
 $$
 \sigma(t) = \frac{1}{1+\text{exp}(-t)}
 $$
@@ -281,31 +282,31 @@ $$
     <img src="https://www.oreilly.com/library/view/hands-on-machine-learning/9781491962282/assets/mlst_04in06.png" alt="sigmoid" style="zoom: 50%;" />
 </p>
 
-로지스틱 회귀 모델로 샘플 $\mathbf{x}$ 가 양성 클래스에 속할 확률 $\hat{p} = h_0(\mathbf{x})$ 를 추정하면 이에 대한 예측 $\hat{y}$ 을 쉽게 구할 수 있다.
+로지스틱 회귀 모델로 샘플 $\mathbf{x}$ 가 양성 클래스에 속할 확률 $\hat{p} = h_0(\mathbf{x})$ 를 추정하면 이에 대한 예측 $\hat{y}$ 을 쉽게 구할 수 있다.<br/>
 
-$\hat{y} = \begin{cases} 0 \quad \hat{p} < 0.5 \\ 1 \quad \hat{p} \geq 0.5 \end{cases}$
+$$\hat{y} = \begin{cases} 0 \quad \hat{p} < 0.5 \\ 1 \quad \hat{p} \geq 0.5 \end{cases}$$
 
 $t < 0$ 이면 $\sigma(t) < 0.5$ 이고, $t \geq 0$ 이면 $\sigma(t) \geq 0.5$ 이다. 따라서 로지스틱 회귀 모델은 $w^T \cdot \mathbf{x}$ 가 양수일 때 1이라고 예측하고, 음수일 때는 0이라고 예측한다.
 
-**로지스틱 회귀의 훈련** : 로지스틱 회귀 모델에서 훈련의 목적은 양성 샘플에 대해서 높은 확률을 추정하고 음성 샘플에 대해서는 낮은 확률을 추정하는 모델의 파라미터 벡터($\mathbf{w}$)를 찾는 것이다. 다음의 비용함수 $c(\mathbf{w})$ 를 통해 $\mathbf{w}$ 를 찾을 수 있다.
+**로지스틱 회귀의 훈련** : 로지스틱 회귀 모델에서 훈련의 목적은 양성 샘플에 대해서 높은 확률을 추정하고 음성 샘플에 대해서는 낮은 확률을 추정하는 모델의 파라미터 벡터($\mathbf{w}$)를 찾는 것이다. 다음의 비용함수 $c(\mathbf{w})$ 를 통해 $\mathbf{w}$ 를 찾을 수 있다.<br/>
 $$
 c(w) = \begin{cases} -\text{log}(\hat{p}) \qquad y = 1 \\ -\text{log}(1 - \hat{p}) \quad y=0 \end{cases}
 $$
-이 비용 함수는 $t$ 가 0에 가까워지면, $-\text{log}(t)$ 가 매우 커지고, $t$ 가 1에 가까워지면 $-\text{log} (t)$ 는 0에 가까워진다. 다시 말해 전자의 경우 모델이 양성 샘플을 0에 가까운 확률로 추정하면 비용이 매우 커지게 되고, 후자의 경우 모델이 양성 샘플을 1에 가깝게 추정하면 비용이 0에 가까워지게 된다. 이를 전체 훈련 세트에 대한 비용 함수로 확장할 수 있으며, 이를 **로그 손실** (log loss)이라고 한다.
+<br/>이 비용 함수는 $t$ 가 0에 가까워지면, $-\text{log}(t)$ 가 매우 커지고, $t$ 가 1에 가까워지면 $-\text{log} (t)$ 는 0에 가까워진다. 다시 말해 전자의 경우 모델이 양성 샘플을 0에 가까운 확률로 추정하면 비용이 매우 커지게 되고, 후자의 경우 모델이 양성 샘플을 1에 가깝게 추정하면 비용이 0에 가까워지게 된다. 이를 전체 훈련 세트에 대한 비용 함수로 확장할 수 있으며, 이를 **로그 손실** (log loss)이라고 한다.<br/>
 $$
 J(w) = -\frac{1}{m}\sum_{i=1}^m[y^{(i)}\text{log}(\hat{p}^{(i)}) + (1 - y^{(i)})\text{log}(1 - \hat{p}^{(i)})]
 $$
-위 비용 함수의 최솟값을 계산하는 알려진 해는 없으나, 볼록 함수이므로 경사 하강법을 통해 전역 최솟값을 찾을 수 있다. 비용 함수의 $j$ 번째 모델 파라미터 $w_j$ 에 대해 편미분을 하면 아래의 식이 도출된다.
+<br/>위 비용 함수의 최솟값을 계산하는 알려진 해는 없으나, 볼록 함수이므로 경사 하강법을 통해 전역 최솟값을 찾을 수 있다. 비용 함수의 $j$ 번째 모델 파라미터 $w_j$ 에 대해 편미분을 하면 아래의 식이 도출된다.<br/>
 $$
 \frac{\partial}{\partial w_j}J(w) = \frac{1}{m} \sum_{i=1}^m (\sigma(w^T \cdot \mathbf{x}^{(i)}) - y^{(i)})x_j^{(i)}
 $$
-0과 1의 클래스로 분류될 확률이 모두 0.5가 되는 지점에서 로지스틱 회귀 모델의 결정 경계(Decision boundary)가 만들어진다. 다른 선형 모델처럼 로지스틱 회귀 모델도 $l_1, l_2$ 페널티를 사용하여 규제할 수 있다. 사이킷런은 기본적으로 $l_2$ 페널티를 기본으로 한다.
+<br/>0과 1의 클래스로 분류될 확률이 모두 0.5가 되는 지점에서 로지스틱 회귀 모델의 결정 경계(Decision boundary)가 만들어진다. 다른 선형 모델처럼 로지스틱 회귀 모델도 $l_1, l_2$ 페널티를 사용하여 규제할 수 있다. 사이킷런은 기본적으로 $l_2$ 페널티를 기본으로 한다.
 
-**소프트맥스 회귀** (Softmax Regression) : 로지스틱 회귀 모델의 이진 분류를 다중 분류로 확장한 것을 소프트맥스 회귀 또는 **다항 로지스틱 회귀** (Multinomial Logistic Regression)라고 한다. 샘플 $\mathbf{x}$ 가 주어지면 소프트맥스 회귀 모델이 각 클래스 $k$ 에 대한 점수 $s_k(\mathbf{x})$ 를 계산하고, 그 점수에 소프트맥스 함수(또는 정규화된 지수 함수(normalized exponential))를 적용하여 각 클래스의 확률을 추정한다. $s_k(\mathbf{x})$ 는 아래와 같은 식으로 계산할 수 있다.
+**소프트맥스 회귀** (Softmax Regression) : 로지스틱 회귀 모델의 이진 분류를 다중 분류로 확장한 것을 소프트맥스 회귀 또는 **다항 로지스틱 회귀** (Multinomial Logistic Regression)라고 한다. 샘플 $\mathbf{x}$ 가 주어지면 소프트맥스 회귀 모델이 각 클래스 $k$ 에 대한 점수 $s_k(\mathbf{x})$ 를 계산하고, 그 점수에 소프트맥스 함수(또는 정규화된 지수 함수(normalized exponential))를 적용하여 각 클래스의 확률을 추정한다. $s_k(\mathbf{x})$ 는 아래와 같은 식으로 계산할 수 있다.<br/>
 $$
 s_k(\mathbf{x}) = (w^{(k)})^T \cdot \mathbf{x}
 $$
-각 클래스는 자신만의 파라미터 벡터 $w^{(k)}$ 가 있으며 이 벡터들은 파라미터 행렬 $\mathbf{w}$ 에 행으로 저장된다. 샘플 $\mathbf{x}$ 에 대해 각 클래스의 점수가 계산되면 소프트맥스 함수를 통과시켜 클래스 $k$ 에 속할 확률인 $\hat{p}_k$ 를 구할 수 있다.
+<br/>각 클래스는 자신만의 파라미터 벡터 $w^{(k)}$ 가 있으며 이 벡터들은 파라미터 행렬 $\mathbf{w}$ 에 행으로 저장된다. 샘플 $\mathbf{x}$ 에 대해 각 클래스의 점수가 계산되면 소프트맥스 함수를 통과시켜 클래스 $k$ 에 속할 확률인 $\hat{p}_k$ 를 구할 수 있다.<br/>
 $$
 \hat{p}_k = \sigma(\mathbf{s}(\mathbf{x}))_k = \frac{\text{exp}(s_k{(\mathbf{x}}))}{\sum_{j=1}^K \text{exp}(s_j(\mathbf{x}))}
 $$
@@ -314,25 +315,25 @@ $$
 - $\mathbf{s}(\mathbf{x})$ : 샘플 $\mathbf{x}$ 에 대한 각 클래스의 점수를 담고 있는 벡터
 - $\sigma(\mathbf{s}(\mathbf{x}))_k$ : 샘플 $\mathbf{x}$ 에 대한 각 클래스의 점수가 주어졌을 때 이 샘플이 클래스 $k$ 에 속할 추정 확률
 
-로지스틱 회귀 모델과 마찬가지로 소프트맥스 회귀 모델도 추정 확률이 가장 높은 클래스를 선택한다.[^7]
+로지스틱 회귀 모델과 마찬가지로 소프트맥스 회귀 모델도 추정 확률이 가장 높은 클래스를 선택한다.[^7]<br/>
 $$
 \hat{y} = \text{argmax}_k \sigma (\mathbf{s}(\mathbf{x}))_k = \text{argmax}_k s_k(\mathbf{x}) = \text{argmax}_k ((w^{(k)})^T \cdot \mathbf{x})
 $$
 
 - $\text{argmax}$ 연산은 함수를 최대화하는 변수의 값을 반환합니다. 이 식에서는 추정확률 $\sigma (\mathbf{s}(\mathbf{x}))_k$ 가 최대인 $k$ 값을 반환한다.
 
-소프트맥스 회귀 모델의 훈련 방법 : 모델이 타겟 클래스에 대해서는 높은 확률을, 다른 클래스에 대해서는 낮을 확률을 추정하게 하는 **크로스엔트로피** (Cross entropy) 비용 함수[^8]를 사용한다.
+소프트맥스 회귀 모델의 훈련 방법 : 모델이 타겟 클래스에 대해서는 높은 확률을, 다른 클래스에 대해서는 낮을 확률을 추정하게 하는 **크로스엔트로피** (Cross entropy) 비용 함수[^8]를 사용한다.<br/>
 $$
 J(\mathbf{w}) = \frac{1}{m}\sum_{i=1}^m \sum_{k=1}^K y^{(i)}_k\text{log}(\hat{p}_k^{(i)})
 $$
 
 - $i$ 번째 샘플에 대한 타깃 클래스가 $k$ 일 때, $y^{(i)}_k$ 가 1이고, 그 외에는 0이다.
 
-위 함수의 $w^{(k)}$ 에 대한 그래디언트 벡터는 아래와 같다.
+위 함수의 $w^{(k)}$ 에 대한 그래디언트 벡터는 아래와 같다.<br/>
 $$
 \nabla_{w^k} J(\mathbf{w}) = \frac{1}{m}\sum_{i=1}^m (\hat{p}_k^{(i)} - y^{(i)}_k) \mathbf{x}^{(i)}
 $$
-이제 각 클래스에 대한 그래디언트 벡터를 계산할 수 있으므로 비용 함수를 최소화 하기 위한 파라미터 행렬인 $\mathbf{w}$ 를 찾기 위해 경사 하강법을 사용할 수 있다.
+<br/>이제 각 클래스에 대한 그래디언트 벡터를 계산할 수 있으므로 비용 함수를 최소화 하기 위한 파라미터 행렬인 $\mathbf{w}$ 를 찾기 위해 경사 하강법을 사용할 수 있다.
 
 사이킷런에서 LogisticRegression() 은 클래스가 둘 이상일 때 기본적으로 일대다(OvA) 전략을 사용한다. 하지만 multi_class 매개변수를 "multimodal"로 바꾸면 소프트맥스 회귀를 사용할 수 있다. 그리고 solver 매개변수에 "lbfgs"와 같이 소프트맥스 회귀를 지원하는 알고리즘을 지정해야 한다. 이때, 기본적으로 하이퍼파라미터 C를 사용하여 조절할 수 있는 $l_2$ 규제가 적용된다. 위 내용을 코드로 구현하면 다음과 같다.
 
