--- a/_posts/2020-02-05-homl5.md
+++ b/_posts/2020-02-05-homl5.md
@@ -73,9 +73,11 @@ poly_kernel_svm_clf.fit(X,y)
 
 위 코드에서는 3차 다항식이 되도록 사용했다. 모델이 과대적합이라면 다항식의 차수를 줄여야 하며, 과소적합이라면 다항식의 차수를 늘려야 한다. 하이퍼파라미터 coef0는 모델이 높은 차수와 낮은 차수에 얼마나 영향을 받을지 조절한다.
 
-**유사도 특성 추가** : 유사도 특성 추가는 비선형 특성을 다루는 또 다른 기법이다. 샘플이 특정 **랜드마크** (landmark)와 얼마나 닮았는지 측정하는 **유사도 함수** (similarity function) 로 계산한 특성을 추가한다. 유사도 함수는 다음과 같다.
+**유사도 특성 추가** : 유사도 특성 추가는 비선형 특성을 다루는 또 다른 기법이다. 샘플이 특정 **랜드마크** (landmark)와 얼마나 닮았는지 측정하는 **유사도 함수** (similarity function) 로 계산한 특성을 추가한다. 유사도 함수는 다음과 같다.<br/>
 $$
+\begin{gather}
 \phi_\gamma (\mathbf{x}, l) = \exp(-\gamma\vert\vert\mathbf{x}-l\vert\vert^2)
+\end{gather}
 $$
 
 - $\gamma$ : **가우시안 방사 기저 함수** (RBF, Radical Basis Function)
@@ -83,7 +85,7 @@ $$
 
 예를 들어, 1차원 데이터셋에 2개의 랜드마크 $x_1 = -2, x_1=1$ 를 추가하고, $\gamma = 0.3$ 이라고 하자. $x_1 = -1$ 샘플은 첫 번째 랜드마크에서는 1만큼, 두 번째 랜드마크에서는 2만큼 떨어져 있다. 그러므로 새로 만든 특성은 각각 $x_2 = \exp(-0.3 * 1^2) = 0.74$ 와 $x_3 = \exp(-0.3 * 2^2) = 0.30$ 이다. $x_2, x_3$ 를 기준으로 샘플을 맵핑하면 이제 선형으로 구분이 가능하게 된다.
 
-<이미지>
+<br/>
 
 **가우시안 RBF 커널** (Gaussian RBF Kernel) : 다항 특성 방식과 마찬가지로 유사도 특성 방식도 머신러닝 알고리즘에 유용하게 사용된다. 데이터의 수가 많은 경우 추가 특성을 모두 계산하려면 연산 비용이 많이 드는데, 이 문제를 **커널 트릭** 이 해결해준다. 커널 트릭을 사용하면 유사도 특성을 많이 추가하는 것과 같은 비슷한 결과를 실제로 특성을 추가하지 않고 얻을 수 있다. 아래와 같은 코드로 SVC 모델에 가우시안 RBF 커널을 적용할 수 있다.
 
@@ -96,7 +98,7 @@ rbf_kernel_svm_clf = Pipeline([
 
 이 모델을 기준으로 하이퍼파라미터 $\gamma$ 와 C를 변경시키며 그린 결정 경계를 나타내면 아래와 같다. 여기서는 $\gamma$ 이 규제의 역할을 한다. $\gamma$ 를 증가시키면 종 모양 그래프가 좁아지면서 각 샘플이 영향을 주는 범위가 좁아진다. 결정 경계가 좀 더 불규칙해지고 각 샘플을 따라 구불구불하게 휘어진다. 반대로 작은 $\gamma$ 값은 넓은 종 모양 그래프를 만들고, 결정 경계가 더 부드러워진다. 모델이 과대적합인 경우 $\gamma$ 를 감소시켜야 하며, 과소적합인 경우에는 $\gamma$ 를 높여주어야 한다.
 
-<이미지>
+<br/>
 
 가우시안 RBF 커널 대신에 다른 커널을 사용할 수도 있지만 잘 사용되지 않는다. Ex) 문자열 커널(문자열 서브시퀀스 커널, 레벤슈타인 거리 기반의 커널)[^1]
 
@@ -127,14 +129,18 @@ svm_poly_reg.fit(X, y)
 
 **결정 함수와 예측** (Decision Function and Predictions) : 선형 SVM은 아래와 같은 식을 생성하여 새로운 샘플 $\mathbf{x}$ 의 클래스를 예측한다.
 $$
-\mathbf{w}^T \mathbf{x} + b = w_1x_1 + w_2x_2 + ... + w_nx_n + b:
+\begin{gather}
+\mathbf{w}^T \mathbf{x} + b = w_1x_1 + w_2x_2 + ... + w_nx_n + b
+\end{gather}
 $$
 
 - $\mathbf{w}$ : 특성 가중 벡터 (feature weights vector)
 - $b$ : 편향 (bias)
 
 $$
+\begin{gather}
 \hat{y} = \begin{cases} 0 \qquad \text{when} \quad \mathbf{w}^T \cdot \mathbf{x} + b < 0  \\ 1 \qquad \text{when} \quad\mathbf{w}^T \cdot \mathbf{x} + b >0\end{cases}
+\end{gather}
 $$
 
 해당 함수의 값이 0보다 클 경우 예측 클래스 $\hat{y}$ 는 양성 클래스가 되고 그렇지 않으면 음성 클래스로 분류된다. 
@@ -143,7 +149,9 @@ $$
 
 **목적 함수** : 위에서 나타난 결정 함수의 기울기는 가중치 벡터 $||\mathbf{w}||$ 의 노름과 같다. 아래의 그림에서 가중치 벡터 $\mathbf{w}$ 가 작을수록 마진이 커지는 것을 볼 수 있다. 마진을 크게 하기 위해 $||\mathbf{w}||$ 를 최소화 한다고 하자. 이 과정에서 마진 오류를 하나도 만들지 않으려면(하드 마진), 결정 함수가 모든 양성 훈련 샘플에서는 1보다 커야 하고 음성 훈련 샘플에서는 -1보다 작아야 한다. 즉 음성 샘플 $y^{(i)} = 0$ 일 때 $t^{(i)} = -1$ 로, 양성 샘플 $y^{(i)} = 1$ 일 때 $t^{(i)} = 1$ 로 정의하면, 앞서 말한 모든 제약 조건은 샘플에서 아래와 같은 식으로 표현할 수 있다.
 $$
+\begin{gather}
 t^{(i)}(\mathbf{w}^T \cdot \mathbf{x}^{(i)} + b) \geq 1
+\end{gather}
 $$
 그러므로 하드 마진 선형 SVM 분류기의 목적 함수를 **제약이 있는 최적화** (Constrained optimization) 문제로 표현할 수 있다.[^2]
 $$
