--- a/_posts/2020-02-06-homl6.md
+++ b/_posts/2020-02-06-homl6.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 5. Support Vector Machines(SVM)
+title: 6. Decision Tree
 category: Hands on Machine Learning
 tag: Machine-Learning
 ---
