--- a/_posts/2020-02-01-homl4.md
+++ b/_posts/2020-02-01-homl4.md
@@ -9,7 +9,8 @@ tag: Machine-Learning
 
 ## 1) 선형회귀 
 
-**선형 회귀모델** : 일반적인 선형 회귀 모델은 다음과 같이 나타난다.
+- **선형 회귀모델** : 일반적인 선형 회귀 모델은 다음과 같이 나타난다.
+
 $$
 \hat{y} = w_0 + w_1x_1 + w_2x_2 + ... + w_nx_n
 $$
