--- a/_posts/2020-02-05-homl5.md
+++ b/_posts/2020-02-05-homl5.md
@@ -156,12 +156,29 @@ $$
 그러므로 하드 마진 선형 SVM 분류기의 목적 함수를 **제약이 있는 최적화** (Constrained optimization) 문제로 표현할 수 있다.[^2]
 $$
 \begin{gather}
-\text{minimize} \quad \frac{1}{2}\mathbf{w}^T \cdot \mathbf{w} \\ \text{subject to} \quad t^{(i)}(\mathbf{w}^T \mathbf{x}^{(i)} + b) \geq 1 \quad \text{for i}= 1, 2, ..., m
+\text{minimize} \quad \frac{1}{2}\mathbf{w}^T \cdot \mathbf{w} \\ \text{subject to} \quad t^{(i)}(\mathbf{w}^T \mathbf{x}^{(i)} + b) \geq 1 \qquad \text{for i}= 1, 2, ..., m
 \end{gather}
 $$
-하드 마진이 아닌 소프트 마진 분류기의 목적 함수를 구성하려면 각 샘플에 대해 **슬랙 변수** (Slack Variable, $\zeta^{(i)} \geq 0$ )를 추가해주어야 한다. $\zeta^{(i)}$ 는 $i$ 번째 샘플이 얼마나 마진을 위반할 지 정한다. 
+하드 마진이 아닌 소프트 마진 분류기의 목적 함수를 구성하려면 각 샘플에 대해 **슬랙 변수** (Slack Variable, $\zeta^{(i)} \geq 0$ )를 추가해주어야 한다. $\zeta^{(i)}$ 는 $i$ 번째 샘플이 얼마나 마진을 위반할 지 정한다. 소프트 마진 분류기는 두 가지 목표를 가지고 있다. 첫 번째는 마진 오류를 최소화 하기 위해 슬랙 변수의 값을 작게 만드는 것. 그리고 두 번째는 마진을 크게 하기 위해서 $\frac{1}{2}\mathbf{w}^T \cdot \mathbf{w}$ 를 작게 만드는 것이다. 여기에 하이퍼파라미터 $C$ 가 등장한다. 소프트 마진 선형 SVM 목적 함수는 아래와 같다.
+$$
+\begin{gather}
+\text{minimize} \quad \frac{1}{2}\mathbf{w}^T \cdot \mathbf{w} + C \sum^m_{i=1} \zeta^{(i)} \\ \text{subject to} \quad t^{(i)}(\mathbf{w}^T \mathbf{x}^{(i)} + b) \geq 1 - \zeta^{(i)} \qquad \text{for i}= 1, 2, ..., m
+\end{gather}
+$$
 
-**콰드라틱 프로그래밍** : 
+
+하드 마진과 소프트 마진 문제처럼 선형적인 제약 조건이 있는 볼록 함수의 이차 최적화 문제를 일컬어 **콰드라틱 프로그래밍** (Quadratic Programming, QP) 문제라고 한다. QP 문제를 해결하는 일반적인 문제 공식은 다음과 같다.
+$$
+\begin{gather}
+\text{minimize} \frac{1}{2} \mathbf{p}^T \cdot \mathbf{H} \cdot \mathbf{p} + \mathbf{f}^T \cdot \mathbf{p} \qquad \text{when } \mathbf{A} \cdot \mathbf{p} \leq \mathbf{b}
+\end{gather}
+$$
+
+- $\mathbf{p}$ : $n_p$ 차원의 벡터 ($n_p = $ 모델 파라미터 수)
+- $\mathbf{H}$ : $n_p \times n_p$ 크기 행렬
+- $\mathbf{f}$ : $n_p$ 차원의 벡터
+- $\mathbf{A}$ : $n_c \times n_p$ 크기 행렬 ($n_c = $ 제약 수)
+- $\mathbf{b}$ : $n_c$ 차원의 벡터
 
 **쌍대 문제** :
 
