--- a/_posts/2020-02-05-homl5.md
+++ b/_posts/2020-02-05-homl5.md
@@ -169,9 +169,9 @@ $$
 
 하드 마진과 소프트 마진 문제처럼 선형적인 제약 조건이 있는 볼록 함수의 이차 최적화 문제를 일컬어 **콰드라틱 프로그래밍** (Quadratic Programming, QP) 문제라고 한다. QP 문제를 해결하는 일반적인 문제 공식은 다음과 같다.
 $$
-\begin{gather}
+\begin{equation}
 \text{minimize} \frac{1}{2} \mathbf{p}^T \cdot \mathbf{H} \cdot \mathbf{p} + \mathbf{f}^T \cdot \mathbf{p} \qquad \text{when } \mathbf{A} \cdot \mathbf{p} \leq \mathbf{b}
-\end{gather}
+\end{equation}
 $$
 
 - $\mathbf{p}$ : $n_p$ 차원의 벡터 ($n_p = $ 모델 파라미터 수)
@@ -180,7 +180,7 @@ $$
 - $\mathbf{A}$ : $n_c \times n_p$ 크기 행렬 ($n_c = $ 제약 수)
 - $\mathbf{b}$ : $n_c$ 차원의 벡터
 
-**쌍대 문제** :
+**쌍대 문제** (Dual Problem) : 원초 문제(primal problem)라는 제약이 있는 최적화 문제가 주어지면 쌍대 문제라고 하는 깊게 연관된 다른 문제로 표현할 수 있다. 일반적으로 쌍대 문제의 해는 원초 문제 해의 하한값이지만, 특정 조건 하에서는 원초 문제 
 
 **커널 SVM** :
 
