--- a/_posts/2020-02-01-homl4.md
+++ b/_posts/2020-02-01-homl4.md
@@ -15,11 +15,12 @@ $$
 \hat{y} = w_0 + w_1x_1 + w_2x_2 + ... + w_nx_n
 $$
 
-$\hat{y}$ : 예측값, $\quad n$ : 특성의 수,$\quad x_i$ : $i$ 번째 특성값
+> $\hat{y}$ : 예측값, $\quad n$ : 특성의 수,$\quad x_i$ : $i$ 번째 특성값
+>
+> $w_j$ : j번째 모델 파라미터 ($w_0$ : 편향,    $w_1, w_2, ... , w_n$ : 특성의 가중치)
+>
 
-$w_j$ : j번째 모델 파라미터 ($w_0$ : 편향,    $w_1, w_2, ... , w_n$ : 특성의 가중치)
-
-위의 식을 벡터 형태로 나타내면 다음과 같은 식이 도출된다.
+위 식을 벡터 형태로 나타내면 다음과 같은 식이 도출된다.
 
 - 벡터로 일반화한 선형 회귀 모델
 
@@ -27,15 +28,15 @@ $$
 \hat{y} = h_w(\mathbf{x}) =  w^T \cdot{\mathbf{x}}
 $$
 
-$h_w$ : 가설 함수
+> $h_w$ : 가설 함수
+>
+> $w^T$ : 모델 파라미터 벡터
+>
+> $\mathbf{x}$ : 샘플의 특성 벡터
 
-$w^T$ : 모델 파라미터 벡터
+[2장]([https://yngie-c.github.io/hands%20on%20machine%20learning/2020/01/29/homl2/](https://yngie-c.github.io/hands on machine learning/2020/01/29/homl2/)) 에서는 회귀모델에 가장 널리 사용되는 지표를 평균 제곱근 오차(RMSE)라고 하였다. 하지만 실제로는 RMSE와 같은 결과를 내면서 더 간단한 평균 제곱 오차(Mean Square Error, MSE)를 사용한다.
 
-$\mathbf{x}$ : 샘플의 특성 벡터
-
-[2장]([https://yngie-c.github.io/hands%20on%20machine%20learning/2020/01/29/homl2/](https://yngie-c.github.io/hands on machine learning/2020/01/29/homl2/)) 에서 회귀모델에 가장 널리 사용되는 지표를 평균 제곱근 오차(RMSE)라고 하였다. 하지만 실제로는 RMSE와 같은 결과를 내면서 더 간단한 평균 제곱 오차(Mean Square Error, MSE)를 사용한다.
-
-- MSE
+- **MSE**
 
 $$
 MSE(\mathbf{X}, h_w) = \frac{1}{m}\sum_{i=1}^m( w^T\cdot\mathbf{x}^{(i)} - y^{(i)})^2
@@ -47,11 +48,11 @@ $$
 \hat{w} = (\mathbf{X}^T \cdot \mathbf{X})^{-1} \cdot \mathbf{X}^T \cdot \mathbf{y}
 $$
 
-$\hat{w}$ 는 비용 함수를 최소화하는 $w$ 의 값
+> $\hat{w}$ 는 비용 함수를 최소화하는 $w$ 의 값
+>
+> $\mathbf{y}$ 는 $y_1$ 부터 $y_m$ 까지 포함하는 타깃 벡터
 
-$\mathbf{y}$ 는 $y_1$ 부터 $y_m$ 까지 포함하는 타깃 벡터
-
-정규 방정식을 이용해 $\hat{w}$ 를 구해보자
+다음은 정규 방정식을 이용해 $\hat{w}$ 를 구할 수 있는 코드이다.
 
 ```python
 import numpy as np
@@ -82,7 +83,7 @@ $$
 
 편도함수는 아래의 식을 사용해 한꺼번에 계산할 수도 있다. [^2]
 
-- 그래디언트 벡터
+- **그래디언트 벡터**
 
 $$
 \nabla_w MSE(w) = \left[\begin{array}{ccc} \frac{\partial}{\partial w_0}MSE(w) \\ \frac{\partial}{\partial w_1}MSE(w) \\ ... \\ \frac{\partial}{\partial w_n}MSE(w) \end{array}\right] = \frac{2}{m}\mathbf{X}^T \cdot (\mathbf{X} \cdot w - \mathbf{y})
@@ -90,17 +91,15 @@ $$
 
 그래디언트 벡터가 구해지면 학습률($\eta$) 을 곱하여 기존의 $w$ 에서 빼주어 새로운 $w$ 를 구하는 방법을 계속 반복한다.
 
-- $w$ 가 개선된다.
+- 아래의 과정을 거쳐 $w$ 가 개선된다.
 
 $$
 w^{d+1} = w^d - \eta \nabla_w MSE(w)
 $$
 
-
-
 여기서 그래디언트 벡터에 곱해줄 적절한 학습률을 찾기 위해 그리드 탐색을 사용한다. 그리드 탐색에서 수렴하는데 너무 오래 걸리는 모델을 막기 위해 반복 횟수를 제한해야 한다. 반복 횟수가 너무 작으면  최적점에 도달하기 전에 알고리즘이 멈추고, 너무 크면 모델 파라미터가 변하지 않는 동안 시간을 낭비하게 된다.  그래서 일반적으로 반복 횟수는 크게 하되 그래디언트 벡터가 특정 값($\epsilon$)[^3]보다 작아지면 알고리즘을 중지하는 방법을 사용한다.
 
-**확률적 경사 하강법** (Stochastic Gradient Descent) : 배치 경사 하강법은 매 스텝마다 전체 훈련 세트를 이용하여 그래디언트를 계산하므로 훈련 세트가 커지면 시간이 오래 걸린다는 단점이 있다. 반대로 확률적 경사 하강법은 매 스텝에서 딱 한 개의 샘플을 무작위로 선택하고 그 하나의 샘플에 대한 그래디언트를 계산한다. 반복마다 사용되는 데이터의 양이 적기 때문에 알고리즘이 훨씬 빠르다.
+- **확률적 경사 하강법** (Stochastic Gradient Descent) : 배치 경사 하강법은 매 스텝마다 전체 훈련 세트를 이용하여 그래디언트를 계산하므로 훈련 세트가 커지면 시간이 오래 걸린다는 단점이 있다. 반대로 확률적 경사 하강법은 매 스텝에서 딱 한 개의 샘플을 무작위로 선택하고 그 하나의 샘플에 대한 그래디언트를 계산한다. 반복마다 사용되는 데이터의 양이 적기 때문에 알고리즘이 훨씬 빠르다.
 
 대신 배치 경사 하강법에 비해 훨씬 불안정하며, 알고리즘이 최솟값과 유사한 값에 도달하긴 하지만 최솟값에 도달하지 못한다. 이런 문제를 해결하기 위해 시작할 때는 학습률을 크게 하고 점차 작게 줄여서 전역 최솟값에 도달하게 하는 학습 스케줄(Learning Schedule) 함수를 사용한다. 일반적으로 한 반복에서 샘플의 개수($m$)만큼 되풀이 되고, 이때의 각 반복을 **에포크** (epoch)라고 한다. 사이킷런에서는 확률적 경사하강법을 위한 SGDRegressor() 클래스를 제공한다.
 
@@ -110,7 +109,7 @@ sgd_reg = SGDRegressor(max_iter=50, penalty=None, eta0=0.1)
 sgd_reg.fit(X, y.ravel())
 ```
 
-**미니배치 경사 하강법** (Mini-batch Gradient Descent) : 각 스텝에서 전체 훈련 세트나 하나의 샘플을 기반으로 그래디언트를 계산하는 것이 아니라 미니배치라고 부르는 임의의 작은 샘플 세트에 대해 그래디언트를 계산하는 방법.
+- **미니배치 경사 하강법** (Mini-batch Gradient Descent) : 각 스텝에서 전체 훈련 세트나 하나의 샘플을 기반으로 그래디언트를 계산하는 것이 아니라 미니배치라고 부르는 임의의 작은 샘플 세트에 대해 그래디언트를 계산하는 방법.
 
 | 알고리즘             | 샘플 수가 클 때 | 특성 수가 클 때 | 외부 메모리 학습 지원 | 스케일 조정 필요 | 하이퍼 파라미터 수 | 사이킷런 클래스  |
 | -------------------- | --------------- | --------------- | --------------------- | ---------------- | ------------------ | ---------------- |
@@ -162,8 +161,6 @@ def plot_learning_curves(model, X, y):
 
 - 과소적합 학습 모델의 학습 곡선 그래프(아래 그래프는 단순 선형 회귀 모델)
 
-
-
 <p align="center">
   <img src="https://www.oreilly.com/library/view/hands-on-machine-learning/9781491962282/assets/mlst_04in04.png" alt="Underfitting" style="zoom: 33%;" />  
 </p>
@@ -199,7 +196,7 @@ def plot_learning_curves(model, X, y):
 $$
 f(w) = MSE(w) + \alpha \frac{1}{2} \sum_{i=1}^n w_i^2
 $$
-식에서 볼 수 있듯, $w_0$ 은 규제되지 않으며, $\mathbf{w}^\prime$ 를 $w_1, w_2, ... , w_n$ 라고 정의하면 규제항은 $\frac{1}{2}(\Vert\mathbf{w}^\prime\Vert_2)^2$ 와 같다. 여기서 $\Vert \cdot \Vert_2$ 가 가중체 벡터의 $l_2$ 노름이다. 경사 하강법에 적용하려면 MSE 그래디언트 벡터 $(\nabla_w MSE(w))$ 에 $\alpha \mathbf{w}^\prime$ 을 더하면 된다.
+<br/>식에서 볼 수 있듯, $w_0$ 은 규제되지 않으며, $\mathbf{w}^\prime$ 를 $w_1, w_2, ... , w_n$ 라고 정의하면 규제항은 $\frac{1}{2}(\Vert\mathbf{w}^\prime\Vert_2)^2$ 와 같다. 여기서 $\Vert \cdot \Vert_2$ 가 가중체 벡터의 $l_2$ 노름이다. 경사 하강법에 적용하려면 MSE 그래디언트 벡터 $(\nabla_w MSE(w))$ 에 $\alpha \mathbf{w}^\prime$ 을 더하면 된다.
 
 리지 회귀는 정규 방정식과 경사 하강법에 모두 사용 가능하며 릿지 회귀의 정규방정식은 $\hat{w} = (\mathbf{X}^T \cdot \mathbf{X} + \alpha \mathbf{A})^{-1} \cdot \mathbf{X}^T \cdot \mathbf{y}$  이다. 두 방법의 장단점은 선형 회귀와 같다. 사이킷런에서는 릿지 회귀가 적용된 각각의 방법을 다음의 코드로 작동시킬 수 있다.
 
@@ -220,14 +217,14 @@ sgd_reg.fit(X, y.ravel())
 $$
 J(w) = MSE(w) + \alpha \sum_{i=1}^n|w_i|
 $$
-라쏘 회귀의 특징은 덜 중요한 특성의 가중치를 완전히 제거하려고 한다는 점이다. 다시 말해 라쏘 회귀는 자동으로 특성 선택을 하고 희소 모델(Sparse model)[^6]을 만든다. 라쏘의 비용 함수는 $w_i = 0$ 에서 미분 가능하지 않다. 하지만 $w_i = 0$ 에서 서브 그래디언트 벡터(Subgradient vector) $\mathbf{g}$ 를 사용하면 경사 하강법을 적용하는 데 문제가 없다.
+<br/>라쏘 회귀의 특징은 덜 중요한 특성의 가중치를 완전히 제거하려고 한다는 점이다. 다시 말해 라쏘 회귀는 자동으로 특성 선택을 하고 희소 모델(Sparse model)[^6]을 만든다. 라쏘의 비용 함수는 $w_i = 0$ 에서 미분 가능하지 않다. 하지만 $w_i = 0$ 에서 서브 그래디언트 벡터(Subgradient vector) $\mathbf{g}$ 를 사용하면 경사 하강법을 적용하는 데 문제가 없다.
 
 - 라쏘 회귀의 경사하강법
 
 $$
 g(w,J) = \nabla_w MSE(w) + \left[\begin{array}{ccc} \text{sign}(w_1) \\ \text{sign}(w_2) \\ ... \\ \text{sign}(w_n) \end{array}\right] \quad 여기서 \quad \text{sign}(w_i) = \begin{cases} -1 \quad w_i < 0 \\ 0 \quad w_i = 0 \\ +1 \quad w_i > 0 \end{cases}
 $$
-사이킷런에서는 다음과 같은 코드로 라쏘 모델을 작동할 수 있다.
+<br/>사이킷런에서는 다음과 같은 코드로 라쏘 모델을 작동할 수 있다.
 
 ```python
 # 정규 방정식
@@ -245,7 +242,7 @@ sgd_reg.fit(X, y.ravel())
 $$
 J(w) = MSE(w) + r \alpha \sum_{i=1}^n|w_i| + \frac{1-r}{2} \alpha \sum_{i=1}^n w_i^2
 $$
-다음은 사이킷런에서 엘라스틱 넷을 작동시키는 방법이다. (r은 l1_ratio 값으로 조정할 수 있다.)
+<br/>다음은 사이킷런에서 엘라스틱 넷을 작동시키는 방법이다. (r은 l1_ratio 값으로 조정할 수 있다.)
 
 ```python
 from sklearn.linear_model import ElasticNet
@@ -290,7 +287,7 @@ for epoch in range(1000):
 $$
 \hat{p} = h_w(\mathbf{x}) = \sigma (w^T \cdot \mathbf{x})
 $$
-$\sigma (\cdot)$ : 시그모이드 함수. 치역(결괏값의 범위)을 (0,1)로 만드는 S자 형태의 함수.<br/>
+<br/>$\sigma (\cdot)$ : 시그모이드 함수. 치역(결괏값의 범위)을 (0,1)로 만드는 S자 형태의 함수.
 
 - 시그모이드 함수의 식과 그래프
 
@@ -315,21 +312,21 @@ $t < 0$ 이면 $\sigma(t) < 0.5$ 이고, $t \geq 0$ 이면 $\sigma(t) \geq 0.5$ 
 $$
 c(w) = \begin{cases} -\text{log}(\hat{p}) \qquad y = 1 \\ -\text{log}(1 - \hat{p}) \quad y=0 \end{cases}
 $$
-이 비용 함수는 $t$ 가 0에 가까워지면, $-\text{log}(t)$ 가 매우 커지고, $t$ 가 1에 가까워지면 $-\text{log} (t)$ 는 0에 가까워진다. 다시 말해 전자의 경우 모델이 양성 샘플을 0에 가까운 확률로 추정하면 비용이 매우 커지게 되고, 후자의 경우 모델이 양성 샘플을 1에 가깝게 추정하면 비용이 0에 가까워지게 된다. 이를 전체 훈련 세트에 대한 비용 함수로 확장할 수 있으며, 이를 **로그 손실** (log loss)이라고 한다.
+<br/>이 비용 함수는 $t$ 가 0에 가까워지면, $-\text{log}(t)$ 가 매우 커지고, $t$ 가 1에 가까워지면 $-\text{log} (t)$ 는 0에 가까워진다. 다시 말해 전자의 경우 모델이 양성 샘플을 0에 가까운 확률로 추정하면 비용이 매우 커지게 되고, 후자의 경우 모델이 양성 샘플을 1에 가깝게 추정하면 비용이 0에 가까워지게 된다. 이를 전체 훈련 세트에 대한 비용 함수로 확장할 수 있으며, 이를 **로그 손실** (log loss)이라고 한다.
 
 - 로그 손실 함수
 
 $$
 J(w) = -\frac{1}{m}\sum_{i=1}^m[y^{(i)}\text{log}(\hat{p}^{(i)}) + (1 - y^{(i)})\text{log}(1 - \hat{p}^{(i)})]
 $$
-위 비용 함수의 최솟값을 계산하는 알려진 해는 없으나, 볼록 함수이므로 경사 하강법을 통해 전역 최솟값을 찾을 수 있다. 비용 함수의 $j$ 번째 모델 파라미터 $w_j$ 에 대해 편미분을 하면 아래의 식이 도출된다.
+<br/>위 비용 함수의 최솟값을 계산하는 알려진 해는 없으나, 볼록 함수이므로 경사 하강법을 통해 전역 최솟값을 찾을 수 있다. 비용 함수의 $j$ 번째 모델 파라미터 $w_j$ 에 대해 편미분을 하면 아래의 식이 도출된다.
 
 - 로그 손실 함수의 미분식
 
 $$
 \frac{\partial}{\partial w_j}J(w) = \frac{1}{m} \sum_{i=1}^m (\sigma(w^T \cdot \mathbf{x}^{(i)}) - y^{(i)})x_j^{(i)}
 $$
-0과 1의 클래스로 분류될 확률이 모두 0.5가 되는 지점에서 로지스틱 회귀 모델의 결정 경계(Decision boundary)가 만들어진다. 다른 선형 모델처럼 로지스틱 회귀 모델도 $l_1, l_2$ 페널티를 사용하여 규제할 수 있다. 사이킷런은 기본적으로 $l_2$ 페널티를 기본으로 한다.
+<br/>0과 1의 클래스로 분류될 확률이 모두 0.5가 되는 지점에서 로지스틱 회귀 모델의 결정 경계(Decision boundary)가 만들어진다. 다른 선형 모델처럼 로지스틱 회귀 모델도 $l_1, l_2$ 페널티를 사용하여 규제할 수 있다. 사이킷런은 기본적으로 $l_2$ 페널티를 기본으로 한다.
 
 - **소프트맥스 회귀** (Softmax Regression) : 로지스틱 회귀 모델의 이진 분류를 다중 분류로 확장한 것을 소프트맥스 회귀 또는 **다항 로지스틱 회귀** (Multinomial Logistic Regression)라고 한다. 샘플 $\mathbf{x}$ 가 주어지면 소프트맥스 회귀 모델이 각 클래스 $k$ 에 대한 점수 $s_k(\mathbf{x})$ 를 계산하고, 그 점수에 소프트맥스 함수(또는 정규화된 지수 함수(normalized exponential))를 적용하여 각 클래스의 확률을 추정한다. $s_k(\mathbf{x})$ 는 아래와 같은 식으로 계산할 수 있다.
 
@@ -342,11 +339,11 @@ $$
 \hat{p}_k = \sigma(\mathbf{s}(\mathbf{x}))_k = \frac{\text{exp}(s_k{(\mathbf{x}}))}{\sum_{j=1}^K \text{exp}(s_j(\mathbf{x}))}
 $$
 
-$K$ : 클래스 수
-
-$\mathbf{s}(\mathbf{x})$ : 샘플 $\mathbf{x}$ 에 대한 각 클래스의 점수를 담고 있는 벡터
-
-$\sigma(\mathbf{s}(\mathbf{x}))_k$ : 샘플 $\mathbf{x}$ 에 대한 각 클래스의 점수가 주어졌을 때 이 샘플이 클래스 $k$ 에 속할 추정 확률
+> $K$ : 클래스 수
+>
+> $\mathbf{s}(\mathbf{x})$ : 샘플 $\mathbf{x}$ 에 대한 각 클래스의 점수를 담고 있는 벡터
+>
+> $\sigma(\mathbf{s}(\mathbf{x}))_k$ : 샘플 $\mathbf{x}$ 에 대한 각 클래스의 점수가 주어졌을 때 이 샘플이 클래스 $k$ 에 속할 추정 확률
 
 로지스틱 회귀 모델과 마찬가지로 소프트맥스 회귀 모델도 추정 확률이 가장 높은 클래스를 선택한다.[^7]
 
@@ -358,20 +355,20 @@ $$
 
 $\text{argmax}$ 연산은 함수를 최대화하는 변수의 값을 반환. 이 식에서는 추정확률 $\sigma (\mathbf{s}(\mathbf{x}))_k$ 가 최대인 $k$ 값을 반환한다.
 
-- 소프트맥스 회귀 모델의 훈련 방법 : 모델이 타겟 클래스에 대해서는 높은 확률을, 다른 클래스에 대해서는 낮을 확률을 추정하게 하는 **크로스엔트로피** (Cross entropy) 비용 함수[^8]를 사용한다.<br/>
+- 소프트맥스 회귀 모델의 훈련 방법 : 모델이 타겟 클래스에 대해서는 높은 확률을, 다른 클래스에 대해서는 낮을 확률을 추정하게 하는 **크로스엔트로피** (Cross entropy) 비용 함수[^8]를 사용한다.
 
 $$
 J(\mathbf{w}) = \frac{1}{m}\sum_{i=1}^m \sum_{k=1}^K y^{(i)}_k\text{log}(\hat{p}_k^{(i)})
 $$
 
-$i$ 번째 샘플에 대한 타깃 클래스가 $k$ 일 때, $y^{(i)}_k$ 가 1이고, 그 외에는 0이다.
+<br/>$i$ 번째 샘플에 대한 타깃 클래스가 $k$ 일 때, $y^{(i)}_k$ 가 1이고, 그 외에는 0이다.
 
 - 크로스엔트로피 함수의 $w^{(k)}$ 에 대한 그래디언트 벡터
 
 $$
 \nabla_{w^k} J(\mathbf{w}) = \frac{1}{m}\sum_{i=1}^m (\hat{p}_k^{(i)} - y^{(i)}_k) \mathbf{x}^{(i)}
 $$
-이제 각 클래스에 대한 그래디언트 벡터를 계산할 수 있으므로 비용 함수를 최소화 하기 위한 파라미터 행렬인 $\mathbf{w}$ 를 찾기 위해 경사 하강법을 사용할 수 있다.
+<br/>이제 각 클래스에 대한 그래디언트 벡터를 계산할 수 있으므로 비용 함수를 최소화 하기 위한 파라미터 행렬인 $\mathbf{w}$ 를 찾기 위해 경사 하강법을 사용할 수 있다.
 
 사이킷런에서 LogisticRegression() 은 클래스가 둘 이상일 때 기본적으로 일대다(OvA) 전략을 사용한다. 하지만 multi_class 매개변수를 "multimodal"로 바꾸면 소프트맥스 회귀를 사용할 수 있다. 그리고 solver 매개변수에 "lbfgs"와 같이 소프트맥스 회귀를 지원하는 알고리즘을 지정해야 한다. 이때, 기본적으로 하이퍼파라미터 C를 사용하여 조절할 수 있는 $l_2$ 규제가 적용된다. 위 내용을 코드로 구현하면 다음과 같다.
 
