--- a/_posts/2020-02-01-homl4.md
+++ b/_posts/2020-02-01-homl4.md
@@ -17,7 +17,7 @@ $$
 
 > $\hat{y}$ : 예측값, $\quad n$ : 특성의 수,$\quad x_i$ : $i$ 번째 특성값
 >
-> $w_j$ : j번째 모델 파라미터 ($w_0$ : 편향,    $w_1, w_2, ... , w_n$ : 특성의 가중치)
+> $w_j$ : $j$ 번째 모델 파라미터 ($w_0$ : 편향,    $w_1, w_2, ... , w_n$ : 특성의 가중치)
 >
 
 위 식을 벡터 형태로 나타내면 다음과 같은 식이 도출된다.
@@ -41,6 +41,8 @@ $$
 $$
 MSE(\mathbf{X}, h_w) = \frac{1}{m}\sum_{i=1}^m( w^T\cdot\mathbf{x}^{(i)} - y^{(i)})^2
 $$
+
+<br/>
 
 - **정규 방정식** : 비용 함수를 최소화 하는 해석적인 방법 (자세한 설명은 [이곳]([https://ko.wikipedia.org/wiki/%EC%B5%9C%EC%86%8C%EC%A0%9C%EA%B3%B1%EB%B2%95#%EC%84%A0%ED%98%95_%EC%B5%9C%EC%86%8C%EC%A0%9C%EA%B3%B1%EB%B2%95](https://ko.wikipedia.org/wiki/최소제곱법#선형_최소제곱법)) 을 참조하자) <br/>
 
@@ -71,7 +73,7 @@ theta_best = np.linalg.inv(X_b.T.dot(X_b)).dot(X_b.T).dot(y)
   - 지역 최솟값(local minimum)으로의 수렴 : 전역 최솟값(global minimum)이 아닌 지역 최솟값에 수렴할 수도 있다. 
   - 평탄한 구간에서의 시간 지연 : 평탄한 구간을 지나게 되는 경우 시간이 오래 걸리고 모델이 일찍 멈추게 된다.
 
-다행히 선형 회귀를 위한 MSE 비용 함수는 곡선에서 어떤 두 점을 선택하여 선을 긋더라도 곡선을 가르지 않는 볼록 함수(Convex Function). 오직 하나의 전역 최솟값만을 가진다. 또한 연속된 함수이고 기울기가 갑자기 변하지 않음. [^1] 
+다행히 선형 회귀를 위한 MSE 비용 함수는 곡선에서 어떤 두 점을 선택하여 선을 긋더라도 곡선을 가르지 않는 볼록 함수(Convex Function). 따라서 오직 하나의 전역 최솟값만을 가진다. 또한 연속된 함수이고 기울기가 갑자기 변하지 않음. [^1] 
 
 특성의 스케일이 다른 경우에도 수렴하는데 시간이 오래 걸릴 수 있으므로 특성 스케일링을 통해 같은 스케일을 갖도록 만들어야 한다.
 
@@ -81,7 +83,7 @@ $$
 \frac{\partial}{\partial w_j}MSE(w) = \frac{2}{m}\sum_{i=1}^{m}(w^T \cdot \mathbf{x}^{(i)} - y^{(i)})x^{(i)}_j
 $$
 
-편도함수는 아래의 식을 사용해 한꺼번에 계산할 수도 있다. [^2]
+편도함수는 아래의 식을 사용해 그래디언트 벡터로 한꺼번에 계산할 수도 있다. [^2]
 
 - **그래디언트 벡터**
 
@@ -91,7 +93,7 @@ $$
 
 그래디언트 벡터가 구해지면 학습률($\eta$) 을 곱하여 기존의 $w$ 에서 빼주어 새로운 $w$ 를 구하는 방법을 계속 반복한다.
 
-- 아래의 과정을 거쳐 $w$ 가 개선된다.
+- 그래디언트 벡터와 학습률의 곱을 빼주며 감소하는 $w$ 식
 
 $$
 w^{d+1} = w^d - \eta \nabla_w MSE(w)
@@ -196,7 +198,8 @@ def plot_learning_curves(model, X, y):
 $$
 f(w) = MSE(w) + \alpha \frac{1}{2} \sum_{i=1}^n w_i^2
 $$
-<br/>식에서 볼 수 있듯, $w_0$ 은 규제되지 않으며, $\mathbf{w}^\prime$ 를 $w_1, w_2, ... , w_n$ 라고 정의하면 규제항은 $\frac{1}{2}(\Vert\mathbf{w}^\prime\Vert_2)^2$ 와 같다. 여기서 $\Vert \cdot \Vert_2$ 가 가중체 벡터의 $l_2$ 노름이다. 경사 하강법에 적용하려면 MSE 그래디언트 벡터 $(\nabla_w MSE(w))$ 에 $\alpha \mathbf{w}^\prime$ 을 더하면 된다.
+
+식에서 볼 수 있듯, $w_0$ 은 규제되지 않으며, $\mathbf{w}^\prime$ 를 $w_1, w_2, ... , w_n$ 라고 정의하면 규제항은 $\frac{1}{2}(\Vert\mathbf{w}^\prime\Vert_2)^2$ 와 같다. 여기서 $\Vert \cdot \Vert_2$ 가 가중체 벡터의 $l_2$ 노름이다. 경사 하강법에 적용하려면 MSE 그래디언트 벡터 $(\nabla_w MSE(w))$ 에 $\alpha \mathbf{w}^\prime$ 을 더하면 된다.
 
 리지 회귀는 정규 방정식과 경사 하강법에 모두 사용 가능하며 릿지 회귀의 정규방정식은 $\hat{w} = (\mathbf{X}^T \cdot \mathbf{X} + \alpha \mathbf{A})^{-1} \cdot \mathbf{X}^T \cdot \mathbf{y}$  이다. 두 방법의 장단점은 선형 회귀와 같다. 사이킷런에서는 릿지 회귀가 적용된 각각의 방법을 다음의 코드로 작동시킬 수 있다.
 
@@ -217,14 +220,18 @@ sgd_reg.fit(X, y.ravel())
 $$
 J(w) = MSE(w) + \alpha \sum_{i=1}^n|w_i|
 $$
-<br/>라쏘 회귀의 특징은 덜 중요한 특성의 가중치를 완전히 제거하려고 한다는 점이다. 다시 말해 라쏘 회귀는 자동으로 특성 선택을 하고 희소 모델(Sparse model)[^6]을 만든다. 라쏘의 비용 함수는 $w_i = 0$ 에서 미분 가능하지 않다. 하지만 $w_i = 0$ 에서 서브 그래디언트 벡터(Subgradient vector) $\mathbf{g}$ 를 사용하면 경사 하강법을 적용하는 데 문제가 없다.
+
+
+
+라쏘 회귀의 특징은 덜 중요한 특성의 가중치를 완전히 제거하려고 한다는 점이다. 다시 말해 라쏘 회귀는 자동으로 특성 선택을 하고 희소 모델(Sparse model)[^6]을 만든다. 라쏘의 비용 함수는 $w_i = 0$ 에서 미분 가능하지 않다. 하지만 $w_i = 0$ 에서 서브 그래디언트 벡터(Subgradient vector) $\mathbf{g}$ 를 사용하면 경사 하강법을 적용하는 데 문제가 없다.
 
 - 라쏘 회귀의 경사하강법
 
 $$
 g(w,J) = \nabla_w MSE(w) + \left[\begin{array}{ccc} \text{sign}(w_1) \\ \text{sign}(w_2) \\ ... \\ \text{sign}(w_n) \end{array}\right] \quad 여기서 \quad \text{sign}(w_i) = \begin{cases} -1 \quad w_i < 0 \\ 0 \quad w_i = 0 \\ +1 \quad w_i > 0 \end{cases}
 $$
-<br/>사이킷런에서는 다음과 같은 코드로 라쏘 모델을 작동할 수 있다.
+
+사이킷런에서는 다음과 같은 코드로 라쏘 모델을 작동할 수 있다.
 
 ```python
 # 정규 방정식
@@ -242,7 +249,8 @@ sgd_reg.fit(X, y.ravel())
 $$
 J(w) = MSE(w) + r \alpha \sum_{i=1}^n|w_i| + \frac{1-r}{2} \alpha \sum_{i=1}^n w_i^2
 $$
-<br/>다음은 사이킷런에서 엘라스틱 넷을 작동시키는 방법이다. (r은 l1_ratio 값으로 조정할 수 있다.)
+
+다음은 사이킷런에서 엘라스틱 넷을 작동시키는 방법이다. (r은 l1_ratio 값으로 조정할 수 있다.)
 
 ```python
 from sklearn.linear_model import ElasticNet
@@ -287,7 +295,8 @@ for epoch in range(1000):
 $$
 \hat{p} = h_w(\mathbf{x}) = \sigma (w^T \cdot \mathbf{x})
 $$
-<br/>$\sigma (\cdot)$ : 시그모이드 함수. 치역(결괏값의 범위)을 (0,1)로 만드는 S자 형태의 함수.
+
+> $\sigma (\cdot)$ : 시그모이드 함수. 치역(결괏값의 범위)을 (0,1)로 만드는 S자 형태의 함수.
 
 - 시그모이드 함수의 식과 그래프
 
@@ -312,27 +321,31 @@ $t < 0$ 이면 $\sigma(t) < 0.5$ 이고, $t \geq 0$ 이면 $\sigma(t) \geq 0.5$ 
 $$
 c(w) = \begin{cases} -\text{log}(\hat{p}) \qquad y = 1 \\ -\text{log}(1 - \hat{p}) \quad y=0 \end{cases}
 $$
-<br/>이 비용 함수는 $t$ 가 0에 가까워지면, $-\text{log}(t)$ 가 매우 커지고, $t$ 가 1에 가까워지면 $-\text{log} (t)$ 는 0에 가까워진다. 다시 말해 전자의 경우 모델이 양성 샘플을 0에 가까운 확률로 추정하면 비용이 매우 커지게 되고, 후자의 경우 모델이 양성 샘플을 1에 가깝게 추정하면 비용이 0에 가까워지게 된다. 이를 전체 훈련 세트에 대한 비용 함수로 확장할 수 있으며, 이를 **로그 손실** (log loss)이라고 한다.
+
+이 비용 함수는 $t$ 가 0에 가까워지면, $-\text{log}(t)$ 가 매우 커지고, $t$ 가 1에 가까워지면 $-\text{log} (t)$ 는 0에 가까워진다. 다시 말해 전자의 경우 모델이 양성 샘플을 0에 가까운 확률로 추정하면 비용이 매우 커지게 되고, 후자의 경우 모델이 양성 샘플을 1에 가깝게 추정하면 비용이 0에 가까워지게 된다. 이를 전체 훈련 세트에 대한 비용 함수로 확장할 수 있으며, 이를 **로그 손실** (log loss)이라고 한다.
 
 - 로그 손실 함수
 
 $$
 J(w) = -\frac{1}{m}\sum_{i=1}^m[y^{(i)}\text{log}(\hat{p}^{(i)}) + (1 - y^{(i)})\text{log}(1 - \hat{p}^{(i)})]
 $$
-<br/>위 비용 함수의 최솟값을 계산하는 알려진 해는 없으나, 볼록 함수이므로 경사 하강법을 통해 전역 최솟값을 찾을 수 있다. 비용 함수의 $j$ 번째 모델 파라미터 $w_j$ 에 대해 편미분을 하면 아래의 식이 도출된다.
+
+위 비용 함수의 최솟값을 계산하는 알려진 해는 없으나, 볼록 함수이므로 경사 하강법을 통해 전역 최솟값을 찾을 수 있다. 비용 함수의 $j$ 번째 모델 파라미터 $w_j$ 에 대해 편미분을 하면 아래의 식이 도출된다.
 
 - 로그 손실 함수의 미분식
 
 $$
 \frac{\partial}{\partial w_j}J(w) = \frac{1}{m} \sum_{i=1}^m (\sigma(w^T \cdot \mathbf{x}^{(i)}) - y^{(i)})x_j^{(i)}
 $$
-<br/>0과 1의 클래스로 분류될 확률이 모두 0.5가 되는 지점에서 로지스틱 회귀 모델의 결정 경계(Decision boundary)가 만들어진다. 다른 선형 모델처럼 로지스틱 회귀 모델도 $l_1, l_2$ 페널티를 사용하여 규제할 수 있다. 사이킷런은 기본적으로 $l_2$ 페널티를 기본으로 한다.
+
+0과 1의 클래스로 분류될 확률이 모두 0.5가 되는 지점에서 로지스틱 회귀 모델의 결정 경계(Decision boundary)가 만들어진다. 다른 선형 모델처럼 로지스틱 회귀 모델도 $l_1, l_2$ 페널티를 사용하여 규제할 수 있다. 사이킷런은 기본적으로 $l_2$ 페널티를 기본으로 한다.
 
 - **소프트맥스 회귀** (Softmax Regression) : 로지스틱 회귀 모델의 이진 분류를 다중 분류로 확장한 것을 소프트맥스 회귀 또는 **다항 로지스틱 회귀** (Multinomial Logistic Regression)라고 한다. 샘플 $\mathbf{x}$ 가 주어지면 소프트맥스 회귀 모델이 각 클래스 $k$ 에 대한 점수 $s_k(\mathbf{x})$ 를 계산하고, 그 점수에 소프트맥스 함수(또는 정규화된 지수 함수(normalized exponential))를 적용하여 각 클래스의 확률을 추정한다. $s_k(\mathbf{x})$ 는 아래와 같은 식으로 계산할 수 있다.
 
 $$
 s_k(\mathbf{x}) = (w^{(k)})^T \cdot \mathbf{x}
 $$
+
 - 각 클래스는 자신만의 파라미터 벡터 $w^{(k)}$ 가 있으며 이 벡터들은 파라미터 행렬 $\mathbf{w}$ 에 행으로 저장된다. 샘플 $\mathbf{x}$ 에 대해 각 클래스의 점수가 계산되면 소프트맥스 함수를 통과시켜 클래스 $k$ 에 속할 확률인 $\hat{p}_k$ 를 구할 수 있다.
 
 $$
@@ -368,7 +381,8 @@ $$
 $$
 \nabla_{w^k} J(\mathbf{w}) = \frac{1}{m}\sum_{i=1}^m (\hat{p}_k^{(i)} - y^{(i)}_k) \mathbf{x}^{(i)}
 $$
-<br/>이제 각 클래스에 대한 그래디언트 벡터를 계산할 수 있으므로 비용 함수를 최소화 하기 위한 파라미터 행렬인 $\mathbf{w}$ 를 찾기 위해 경사 하강법을 사용할 수 있다.
+
+이제 각 클래스에 대한 그래디언트 벡터를 계산할 수 있으므로 비용 함수를 최소화 하기 위한 파라미터 행렬인 $\mathbf{w}$ 를 찾기 위해 경사 하강법을 사용할 수 있다.
 
 사이킷런에서 LogisticRegression() 은 클래스가 둘 이상일 때 기본적으로 일대다(OvA) 전략을 사용한다. 하지만 multi_class 매개변수를 "multimodal"로 바꾸면 소프트맥스 회귀를 사용할 수 있다. 그리고 solver 매개변수에 "lbfgs"와 같이 소프트맥스 회귀를 지원하는 알고리즘을 지정해야 한다. 이때, 기본적으로 하이퍼파라미터 C를 사용하여 조절할 수 있는 $l_2$ 규제가 적용된다. 위 내용을 코드로 구현하면 다음과 같다.
 
