--- a/_posts/2020-02-05-homl5.md
+++ b/_posts/2020-02-05-homl5.md
@@ -73,15 +73,15 @@ poly_kernel_svm_clf.fit(X,y)
 
 위 코드에서는 3차 다항식이 되도록 사용했다. 모델이 과대적합이라면 다항식의 차수를 줄여야 하며, 과소적합이라면 다항식의 차수를 늘려야 한다. 하이퍼파라미터 coef0는 모델이 높은 차수와 낮은 차수에 얼마나 영향을 받을지 조절한다.
 
-**유사도 특성 추가** : 유사도 특성 추가는 비선형 특성을 다루는 또 다른 기법이다. 샘플이 특정 **랜드마크** (landmark)와 얼마나 닮았는지 측정하는 **유사도 함수** (similarity function) 로 계산한 특성을 추가한다. 유사도 함수는 다음과 같다.<br/>
+**유사도 특성 추가** : 유사도 특성 추가는 비선형 특성을 다루는 또 다른 기법이다. 샘플이 특정 **랜드마크** (landmark)와 얼마나 닮았는지 측정하는 **유사도 함수** (similarity function) 로 계산한 특성을 추가한다. 유사도 함수는 다음과 같다.
 $$
-\begin{gather}
 \phi_\gamma (\mathbf{x}, l) = \exp(-\gamma\vert\vert\mathbf{x}-l\vert\vert^2)
-\end{gather}
 $$
 
-- $\gamma$ : **가우시안 방사 기저 함수** (RBF, Radical Basis Function)
-- $l$ : 샘플과 랜드마크 사이의 거리
+
+> $\gamma$ : **가우시안 방사 기저 함수** (RBF, Radical Basis Function)
+>
+> $l$ : 샘플과 랜드마크 사이의 거리
 
 예를 들어, 1차원 데이터셋에 2개의 랜드마크 $x_1 = -2, x_1=1$ 를 추가하고, $\gamma = 0.3$ 이라고 하자. $x_1 = -1$ 샘플은 첫 번째 랜드마크에서는 1만큼, 두 번째 랜드마크에서는 2만큼 떨어져 있다. 그러므로 새로 만든 특성은 각각 $x_2 = \exp(-0.3 * 1^2) = 0.74$ 와 $x_3 = \exp(-0.3 * 2^2) = 0.30$ 이다. $x_2, x_3$ 를 기준으로 샘플을 맵핑하면 이제 선형으로 구분이 가능하게 된다.
 
@@ -102,9 +102,9 @@ rbf_kernel_svm_clf = Pipeline([
 
 가우시안 RBF 커널 대신에 다른 커널을 사용할 수도 있지만 잘 사용되지 않는다. Ex) 문자열 커널(문자열 서브시퀀스 커널, 레벤슈타인 거리 기반의 커널)[^1]
 
- **계산복잡도** : LinearSVC는 커널 트릭을 지원하지는 않지만, 시간 복잡도가 훈련 샘플과 특성 수에 거의 선형적으로 늘어난다. (대략 $O(m*n)$ 정도의 시간복잡도를 가진다.) 또한, 정밀도를 높이면 시간복잡도가 늘어나며 이는 허용오차 하이퍼파라미터 $\epsilon$ 으로 조절한다. 대부분의 분류 문제는 허용오차를 기본값으로 두면 잘 작동하게 된다.
+ **계산복잡도** : LinearSVC는 커널 트릭을 지원하지는 않지만, 시간 복잡도가 훈련 샘플과 특성 수에 거의 선형적으로 늘어난다. (대략 $O(m \times n)$ 정도의 시간복잡도를 가진다.) 또한, 정밀도를 높이면 시간복잡도가 늘어나며 이는 허용오차 하이퍼파라미터 $\epsilon$ 으로 조절한다. 대부분의 분류 문제는 허용오차를 기본값으로 두면 잘 작동하게 된다.
 
-SVC의 시간복잡도는 보통 $O(m^2*n)$ 와 $O(m^3*n)$ 사이에 있다. 이것은 샘플 수(m)가 늘어날수록 모델이 엄청나게 느려진다는 것을 의미한다. 반대로 특성의 개수(n)에는 크게 영향 받지 않고 잘 늘어나며, 특히 희소 특성의 경우에 더욱 잘 확장된다. 
+SVC의 시간복잡도는 보통 $O(m^2 \times n)$ 와 $O(m^3 \times n)$ 사이에 있다. 이것은 샘플 수(m)가 늘어날수록 모델이 엄청나게 느려진다는 것을 의미한다. 반대로 특성의 개수(n)에는 크게 영향 받지 않고 잘 늘어나며, 특히 희소 특성의 경우에 더욱 잘 확장된다. 
 
 <br/>
 
@@ -127,60 +127,71 @@ svm_poly_reg.fit(X, y)
 
 ## 4) SVM 이론
 
-**결정 함수와 예측** (Decision Function and Predictions) : 선형 SVM은 아래와 같은 식을 생성하여 새로운 샘플 $\mathbf{x}$ 의 클래스를 예측한다.
+- **결정 함수와 예측** (Decision Function and Predictions) : 선형 SVM은 아래와 같은 식을 생성하여 새로운 샘플 $\mathbf{x}$ 의 클래스를 예측한다.
+
 $$
-\begin{gather}
 \mathbf{w}^T \mathbf{x} + b = w_1x_1 + w_2x_2 + ... + w_nx_n + b
-\end{gather}
 $$
 
-- $\mathbf{w}$ : 특성 가중 벡터 (feature weights vector)
-- $b$ : 편향 (bias)
+
+
+> $\mathbf{w}$ : 특성 가중 벡터 (feature weights vector)
+>
+> $b$ : 편향 (bias)
 
 $$
-\begin{gather}
 \hat{y} = \begin{cases} 0 \qquad \text{when} \quad \mathbf{w}^T \cdot \mathbf{x} + b < 0  \\ 1 \qquad \text{when} \quad\mathbf{w}^T \cdot \mathbf{x} + b >0\end{cases}
-\end{gather}
 $$
+
+
 
 해당 함수의 값이 0보다 클 경우 예측 클래스 $\hat{y}$ 는 양성 클래스가 되고 그렇지 않으면 음성 클래스로 분류된다. 
 
 
 
-**목적 함수** : 위에서 나타난 결정 함수의 기울기는 가중치 벡터 $||\mathbf{w}||$ 의 노름과 같다. 아래의 그림에서 가중치 벡터 $\mathbf{w}$ 가 작을수록 마진이 커지는 것을 볼 수 있다. 마진을 크게 하기 위해 $||\mathbf{w}||$ 를 최소화 한다고 하자. 이 과정에서 마진 오류를 하나도 만들지 않으려면(하드 마진), 결정 함수가 모든 양성 훈련 샘플에서는 1보다 커야 하고 음성 훈련 샘플에서는 -1보다 작아야 한다. 즉 음성 샘플 $y^{(i)} = 0$ 일 때 $t^{(i)} = -1$ 로, 양성 샘플 $y^{(i)} = 1$ 일 때 $t^{(i)} = 1$ 로 정의하면, 앞서 말한 모든 제약 조건은 샘플에서 아래와 같은 식으로 표현할 수 있다.
+- **목적 함수** : 위에서 나타난 결정 함수의 기울기는 가중치 벡터 $||\mathbf{w}||$ 의 노름과 같다. 아래의 그림에서 가중치 벡터 $\mathbf{w}$ 가 작을수록 마진이 커지는 것을 볼 수 있다. 마진을 크게 하기 위해 $||\mathbf{w}||$ 를 최소화 한다고 하자. 이 과정에서 마진 오류를 하나도 만들지 않으려면(하드 마진), 결정 함수가 모든 양성 훈련 샘플에서는 1보다 커야 하고 음성 훈련 샘플에서는 -1보다 작아야 한다. 즉 음성 샘플 $y^{(i)} = 0$ 일 때 $t^{(i)} = -1$ 로, 양성 샘플 $y^{(i)} = 1$ 일 때 $t^{(i)} = 1$ 로 정의하면, 앞서 말한 모든 제약 조건은 샘플에서 아래와 같은 식으로 표현할 수 있다.
+
 $$
 \begin{gather}
 t^{(i)}(\mathbf{w}^T \cdot \mathbf{x}^{(i)} + b) \geq 1
 \end{gather}
 $$
 그러므로 하드 마진 선형 SVM 분류기의 목적 함수를 **제약이 있는 최적화** (Constrained optimization) 문제로 표현할 수 있다.[^2]
+
+- 하드 마진 분류기의 목적 함수
+
 $$
 \begin{gather}
 \text{minimize} \quad \frac{1}{2}\mathbf{w}^T \cdot \mathbf{w} \\ \text{subject to} \quad t^{(i)}(\mathbf{w}^T \mathbf{x}^{(i)} + b) \geq 1 \qquad \text{for i}= 1, 2, ..., m
 \end{gather}
 $$
 하드 마진이 아닌 소프트 마진 분류기의 목적 함수를 구성하려면 각 샘플에 대해 **슬랙 변수** (Slack Variable, $\zeta^{(i)} \geq 0$ )를 추가해주어야 한다. $\zeta^{(i)}$ 는 $i$ 번째 샘플이 얼마나 마진을 위반할 지 정한다. 소프트 마진 분류기는 두 가지 목표를 가지고 있다. 첫 번째는 마진 오류를 최소화 하기 위해 슬랙 변수의 값을 작게 만드는 것. 그리고 두 번째는 마진을 크게 하기 위해서 $\frac{1}{2}\mathbf{w}^T \cdot \mathbf{w}$ 를 작게 만드는 것이다. 여기에 하이퍼파라미터 $C$ 가 등장한다. 소프트 마진 선형 SVM 목적 함수는 아래와 같다.
+
+- 소프트 마진 분류기의 목적 함수
+
 $$
 \begin{gather}
 \text{minimize} \quad \frac{1}{2}\mathbf{w}^T \cdot \mathbf{w} + C \sum^m_{i=1} \zeta^{(i)} \\ \text{subject to} \quad t^{(i)}(\mathbf{w}^T \mathbf{x}^{(i)} + b) \geq 1 - \zeta^{(i)} \qquad \text{for i}= 1, 2, ..., m
 \end{gather}
 $$
 
+- 하드 마진과 소프트 마진 문제처럼 선형적인 제약 조건이 있는 볼록 함수의 이차 최적화 문제를 일컬어 **콰드라틱 프로그래밍** (Quadratic Programming, QP) 문제라고 한다. QP 문제를 해결하는 일반적인 문제 공식은 다음과 같다.
 
-하드 마진과 소프트 마진 문제처럼 선형적인 제약 조건이 있는 볼록 함수의 이차 최적화 문제를 일컬어 **콰드라틱 프로그래밍** (Quadratic Programming, QP) 문제라고 한다. QP 문제를 해결하는 일반적인 문제 공식은 다음과 같다.
 $$
-\begin{equation}
 \text{minimize} \frac{1}{2} \mathbf{p}^T \cdot \mathbf{H} \cdot \mathbf{p} + \mathbf{f}^T \cdot \mathbf{p} \qquad \text{when } \mathbf{A} \cdot \mathbf{p} \leq \mathbf{b}
-\end{equation}
 $$
 
-- $\mathbf{p}$ : $n_p$ 차원의 벡터 ($n_p = $ 모델 파라미터 수)
-- $\mathbf{H}$ : $n_p \times n_p$ 크기 행렬
-- $\mathbf{f}$ : $n_p$ 차원의 벡터
-- $\mathbf{A}$ : $n_c \times n_p$ 크기 행렬 ($n_c = $ 제약 수)
-- $\mathbf{b}$ : $n_c$ 차원의 벡터
+> $\mathbf{p}$ : $n_p$ 차원의 벡터 ($n_p = $ 모델 파라미터 수)
+>
+> $\mathbf{H}$ : $n_p \times n_p$ 크기 행렬
+>
+> $\mathbf{f}$ : $n_p$ 차원의 벡터
+>
+> $\mathbf{A}$ : $n_c \times n_p$ 크기 행렬 ($n_c = $ 제약 수)
+>
+> $\mathbf{b}$ : $n_c$ 차원의 벡터
 
-**쌍대 문제** (Dual Problem) : 원초 문제(primal problem)라는 제약이 있는 최적화 문제가 주어지면 쌍대 문제라고 하는 깊게 연관된 다른 문제로 표현할 수 있다. 일반적으로 쌍대 문제의 해는 원초 문제 해의 하한값이지만, 특정 조건 하에서는 원초 문제 
+- **쌍대 문제** (Dual Problem) : 원초 문제(primal problem)라는 제약이 있는 최적화 문제가 주어지면 쌍대 문제라고 하는 깊게 연관된 다른 문제로 표현할 수 있다. 일반적으로 쌍대 문제의 해는 원초 문제 해의 하한값이지만, 특정 조건 하에서는 원초 문제 
 
 **커널 SVM** :
 
